--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "functions",
+  "version": "1.0.1",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
@@ -7,6 +8,7 @@
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
+    "genkit:dev": "genkit start -- tsx src/index.ts",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -17,6 +19,7 @@
   "dependencies": {
     "@genkit-ai/firebase": "^1.27.0",
     "@genkit-ai/google-genai": "^1.27.0",
+    "dotenv": "^17.2.3",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0",
     "genkit": "^1.27.0"
@@ -29,6 +32,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.4.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.3"
   },
   "private": true
